crates/cribo/tests/snapshots/execution_results@forward_reference_in_exception.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_in_exception/main.py
---
ExecutionResults {
    status: Success,
    stdout: "MutableMapping: <class 'collections.abc.MutableMapping'>\nJSONDecodeError: <class 'json.decoder.JSONDecodeError'>\ncompat.MutableMapping: <class 'collections.abc.MutableMapping'>\ncompat.JSONDecodeError: <class 'json.decoder.JSONDecodeError'>\nExpected error creating abstract MutableMapping: TypeError\ncompat.builtin_str exists: True\ncompat.is_str exists: True\ncompat.builtin_str is str: True\nis_str('test'): True\nis_str(123): False",
    stderr: "",
}
