crates/cribo/tests/snapshots/execution_results@forward_reference_pkg.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_pkg/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Value: Cached: compat_value\nTest completed",
    stderr: "",
}
