crates/cribo/tests/snapshots/execution_results@forward_reference_requests_compat.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_requests_compat/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Cookie: value\nJSONDecodeError MRO: ['JSONDecodeError', 'InvalidJSONError', 'RequestException', 'JSONDecodeError', 'ValueError', 'Exception', 'BaseException', 'object']\nTest completed",
    stderr: "",
}
