crates/cribo/tests/snapshots/execution_results@future_imports_basic.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/future_imports_basic/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Processing result: {'input': {'key': 'value', 'numbers': [1, 2, 3]}, 'processed': True, 'output': ['key=value', 'numbers=[1, 2, 3]']}",
    stderr: "",
}
