crates/cribo/tests/snapshots/execution_results@future_imports_multiple.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/future_imports_multiple/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Function A\nFunction B",
    stderr: "",
}
