crates/cribo/tests/snapshots/execution_results@import_shadowing.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/import_shadowing/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Package A result: TOP_LEVEL_UTILS\nPackage B result: TOP_LEVEL_UTILS\nBoth packages used the top-level utils module (as Python does).",
    stderr: "",
}
