crates/cribo/tests/snapshots/execution_results@importlib_edge_cases.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_edge_cases/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Value: 42\nFunction result: 42\nSUCCESS: Importlib works with invalid identifiers!",
    stderr: "",
}
